--- a/pages/index.html
+++ b/pages/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h2>Welcome</h2>
+    <form action="/api/register/user" method="POST">
+        <input type="text" value="" name="user" id="user-name-1"/>
+        <input type="password" value="" name="psw" id="psw-1"/>
+        <button type="submit">Submit</button>
+    </form>
 </body>
 </html>
