--- a/pages/index.html
+++ b/pages/index.html
@@ -8,8 +8,8 @@
 <body>
     <h2>Welcome</h2>
     <form action="/api/register-user" method="POST">
-        <input type="text" value="" name="user" id="user-name-1"/>
-        <input type="password" value="" name="psw" id="psw-1"/>
+        <input type="text" name="user" id="user-name-1"/>
+        <input type="password" name="psw" id="psw-1"/>
         <button type="submit">Submit</button>
     </form>
 </body>
